PVM Invocations: Yielding accumulation hash possible on OOG (#179)
* PVM Invocations: Yielding accumulation hash possible on OOG

* Index

--- a/text/pvm_invocations.tex
+++ b/text/pvm_invocations.tex
@@ -111,7 +111,8 @@ Formally, we define our result context to be $\mathbf{X}$, and our invocation co
     \isa{s}{\N_S},
     \isa{\mathbf{u}}{\partialstate},
     \isa{i}{\N_S},
-    \isa{\mathbf{t}}{\seq{\mathbb{T}}}
+    \isa{\mathbf{t}}{\seq{\mathbb{T}}},
+    \isa{y}{\maybe{\H}}
   }\\
   \forall \mathbf{x} \in \mathbf{X} : \mathbf{x}_\mathbf{s} &\equiv (\mathbf{x}_\mathbf{u})_\mathbf{d}[\mathbf{x}_s]
 \end{align}
@@ -140,7 +141,8 @@ We define $\Psi_A$, the Accumulation invocation function as:
       s,
       \is{\mathbf{u}}{\tuple{\is{\mathbf{d}}{\{s \mapsto \mathbf{d}[s]\}}, \is{\mathbf{x}}{\mathbf{u}_\mathbf{x}}, \is{\mathbf{i}}{\mathbf{u}_\mathbf{i}}, \is{\mathbf{q}}{\mathbf{u}_\mathbf{q}}}},
       i,
-      \is{\mathbf{t}}{[]}
+      \is{\mathbf{t}}{[]},
+      \is{y}{\none}
     }\\
     &\qquad\where i = \text{check}((\de_4(\mathcal{H}(\se(s, \eta'_0, \mathbf{H}_t))) \bmod (2^{32}-2^9)) + 2^8) \\
   \end{aligned}\right.\\
@@ -161,6 +163,7 @@ We define $\Psi_A$, the Accumulation invocation function as:
     \Omega_J(\gascounter, \registers, \memory, (\mathbf{x}, \mathbf{y})) &\when n = \mathtt{query} \\
     \Omega_S(\gascounter, \registers, \memory, (\mathbf{x}, \mathbf{y}), \mathbf{H}_t) &\when n = \mathtt{solicit} \\
     \Omega_F(\gascounter, \registers, \memory, (\mathbf{x}, \mathbf{y}), \mathbf{H}_t) &\when n = \mathtt{forget} \\
+    \Omega_\Taurus(\gascounter, \registers, \memory, (\mathbf{x}, \mathbf{y})) &\when n = \mathtt{yield} \\
     (\continue, \gascounter - 10, [\registers_0, \dots, \registers_6, \mathtt{WHAT}, \registers_8, \dots], \memory, \mathbf{x}) &\otherwise\\
     \quad \where \mathbf{d} = (\mathbf{x}_\mathbf{u})_\mathbf{d}\cup\mathbf{x}_\mathbf{d}\;,\ \mathbf{s} = (\mathbf{x}_\mathbf{u})_\mathbf{d}[\mathbf{x}_s]\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!& \\
   \end{cases} \\
@@ -173,23 +176,23 @@ We define $\Psi_A$, the Accumulation invocation function as:
     (\N_G, \mathbb{Y} \cup \{\oog, \panic\}, (\mathbf{X}, \mathbf{X})) &\to (\partialstate, \defxfers, \H\bm{?}, \N_G) \\
     (g, \mathbf{o}, (\mathbf{x}, \mathbf{y})) &\mapsto \begin{cases}
       \tup{
+        \mathbf{y}_\mathbf{u},
+        \mathbf{y}_\mathbf{t},
+        \mathbf{y}_y,
+        g
+      } & \when \mathbf{o} \in \{\oog, \panic\} \\
+      \tup{
         \mathbf{x}_\mathbf{u},
         \mathbf{x}_\mathbf{t},
         \mathbf{o},
         g
-      } & \when \mathbf{o} \in \mathbb{H} \\
+      } & \otherwhen \mathbf{o} \in \H \\
       \tup{
         \mathbf{x}_\mathbf{u},
         \mathbf{x}_\mathbf{t},
-        \none,
+        \mathbf{x}_y,
         g
-      } & \when \mathbf{o} \in \mathbb{Y} \setminus \H \\
-      \tup{
-        \mathbf{y}_\mathbf{u},
-        \mathbf{y}_\mathbf{t},
-        \none,
-        g
-      } & \when \mathbf{o} \in \{\oog, \panic\} \\
+      } & \otherwise \\
     \end{cases}
   \end{aligned}\right.
 \end{align}
@@ -626,6 +629,22 @@ Other than the gas-counter which is explicitly defined, elements of \textsc{pvm}
       (\mathtt{OK}, \mathbf{a}) &\otherwise \\
     \end{cases} \\
   \end{aligned}$\\
+  \cmidrule(lr){1-1}\cmidrule(lr){2-2}
+  \makecell*[l]{
+  $\Omega_\Aries(\gascounter, \registers, \memory, (\mathbf{x}, \mathbf{y}))$ \\
+  \texttt{yield} = 16 \\
+  $g = 10$} &
+  $\begin{aligned}
+    \using o &= \registers_7 \\
+    \using h &= \begin{cases}
+      \memory_{o\dots+32} &\when \mathbb{Z}_{o \dots+ 32} \subset \mathbb{V}_{\memory} \\
+      \error &\otherwise
+    \end{cases} \\
+    (\registers'_7, \mathbf{x}'_y) &\equiv \begin{cases}
+      (\mathtt{OOB}, \mathbf{x}_y) &\when h = \error \\
+      (\mathtt{OK}, h) &\otherwise \\
+    \end{cases} \\
+  \end{aligned}$\\
   \bottomrule
 \end{longtable}
 
@@ -648,7 +667,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \endhead
   \makecell*[l]{
   $\Omega_H(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}), s, \mathbf{d}, t)$ \\
-  \texttt{historical\_lookup} = 16 \\
+  \texttt{historical\_lookup} = 17 \\
   $g = 10$} &
   $\begin{aligned}
     \using \mathbf{a} &= \begin{cases}
@@ -675,7 +694,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_Y(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}), \mathbf{i})$ \\
-  \texttt{import} = 17 \\
+  \texttt{import} = 18 \\
   $g = 10$} &
   $\begin{aligned}
     \using \mathbf{v} &= \begin{cases}
@@ -697,7 +716,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_E(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}), \segoff)$ \\
-  \texttt{export} = 18 \\
+  \texttt{export} = 19 \\
   $g = 10$} &
   $\begin{aligned}
     \using p &= \registers_7 \\
@@ -715,7 +734,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_M(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{machine} = 19 \\
+  \texttt{machine} = 20 \\
   $g = 10$} &
   $\begin{aligned}
     \using [p_o, p_z, i] &= \registers_{7 \dots 10} \\
@@ -733,7 +752,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_P(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{peek} = 20 \\
+  \texttt{peek} = 21 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, o, s, z] &= \registers_{7 \dots 11} \\
@@ -751,7 +770,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_O(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{poke} = 21 \\
+  \texttt{poke} = 22 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, s, o, z] &= \registers_{7 \dots 11} \\
@@ -769,7 +788,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_Z(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{zero} = 22 \\
+  \texttt{zero} = 23 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, p, c] &= \registers_{7 \dots 10} \\
@@ -790,7 +809,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_V(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{void} = 23 \\
+  \texttt{void} = 24 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, p, c] &= \registers_{7 \dots 10} \\
@@ -812,7 +831,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_K(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{invoke} = 24 \\
+  \texttt{invoke} = 25 \\
   $g = 10$} &
   $\begin{aligned}
     \using [n, o] &= \registers_{7, 8} \\
@@ -843,7 +862,7 @@ These assume some refine context pair $(\mathbf{m}, \mathbf{e}) \in (\dict{\N}{\
   \cmidrule(lr){1-1}\cmidrule(lr){2-2}
   \makecell*[l]{
   $\Omega_X(\gascounter, \registers, \memory, (\mathbf{m}, \mathbf{e}))$ \\
-  \texttt{expunge} = 25 \\
+  \texttt{expunge} = 26 \\
   $g = 10$} &
   $\begin{aligned}
     \using n &= \registers_7 \\
