--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -104,14 +104,14 @@
     \item[$\Omega_G$] Gas-remaining host-call.
     \item[$\Omega_H$] Historical-lookup-preimage host-call.
     \item[$\Omega_I$] Information-on-service host-call.
-    \item[$\Omega_J$] Query-preimage host-call.
+    \item[$\Omega_J$] Eject-service host-call.
     \item[$\Omega_K$] Kickoff-\textsc{pvm} host-call.
     \item[$\Omega_L$] Lookup-preimage host-call.
     \item[$\Omega_M$] Make-\textsc{pvm} host-call.
     \item[$\Omega_N$] New-service host-call.
     \item[$\Omega_O$] Poke-\textsc{pvm} host-call.
     \item[$\Omega_P$] Peek-\textsc{pvm} host-call.
-    \item[$\Omega_Q$] Quit-service host-call.
+    \item[$\Omega_Q$] Query-preimage host-call.
     \item[$\Omega_R$] Read-storage host-call.
     \item[$\Omega_S$] Solicit-preimage host-call.
     \item[$\Omega_T$] Transfer host-call.
