WP&WRs: Avoid referring to defunct function

--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -221,7 +221,7 @@ The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ whi
   \begin{aligned}
     \extrinsicdata(\wiX \in \mathbb{I}) &\equiv [\mathbf{d} \mid (\mathcal{H}(\mathbf{d}), |\mathbf{d}|) \orderedin \wiX_\wi¬extrinsics] \\
     \importsegmentdata(\wiX \in \mathbb{I}) &\equiv [\mathbf{s}[n] \mid \mathcal{M}(\mathbf{s}) = L(r), (r, n) \orderedin \wiX_\wi¬importsegments] \\
-    \justifysegmentdata(\wiX \in \mathbb{I}) &\equiv [\var{\mathcal{J}(\mathbf{s}, n)} \mid \mathcal{M}(\mathbf{s}) = L(r), (r, n) \orderedin \wiX_\wi¬importsegments]
+    \justifysegmentdata(\wiX \in \mathbb{I}) &\equiv [\var{\mathcal{J}_0(\mathbf{s}, n)} \mid \mathcal{M}(\mathbf{s}) = L(r), (r, n) \orderedin \wiX_\wi¬importsegments]
   \end{aligned}
 \end{equation}
 
