feat(overview): add tau to the denpdencies of disputes

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -53,7 +53,7 @@ Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulatin
   \eta' &\prec (\mathbf{H}, \tau, \eta) \\
   \kappa' &\prec (\mathbf{H}, \tau, \kappa, \gamma) \\
   \lambda' &\prec (\mathbf{H}, \tau, \lambda, \kappa) \\
-  \psi' &\prec (\xtdisputes, \psi) \\
+  \psi' &\prec (\xtdisputes, \tau, \psi) \\
   \rho^\dagger &\prec (\xtdisputes, \rho) \label{eq:rhodagger} \\
   \rho^\ddagger &\prec (\xtassurances, \rho^\dagger) \label{eq:rhoddagger} \\
   \rho' &\prec (\xtguarantees, \rho^\ddagger, \kappa, \tau') \\
