Minor typographic formatting correction
Typographic formatting correction

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -11,7 +11,7 @@ Broadly speaking, \Jam (and indeed blockchains in general) may be defined simply
 
 \subsection{The Block}
 
-To aid comprehension and definition of our protocol, we partition as many of our terms as possible into their functional components. We begin with the block $B$ which may be restated as the header $H$ and some input data external to the system and thus said to be \emph{extrinsic}, $\mathbf{E}$:
+To aid comprehension and definition of our protocol, we partition as many of our terms as possible into their functional components. We begin with the block $\mathbf{B}$ which may be restated as the header $\mathbf{H}$ and some input data external to the system and thus said to be \emph{extrinsic}, $\mathbf{E}$:
 \begin{align}
   \label{eq:block}\mathbf{B} &\equiv (\mathbf{H}, \mathbf{E}) \\
   \label{eq:extrinsic}\mathbf{E} &\equiv (\xttickets, \xtdisputes, \xtpreimages, \xtassurances, \xtguarantees)
